--- a/package.json
+++ b/package.json
@@ -4,7 +4,25 @@
   "main": "dist/app.js",
   "author": "pavloff.com@gmail.com",
   "license": "MIT",
+  "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev src/app.ts",
+    "dev2": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
+  },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.33",
+    "concurrently": "^7.1.0",
+    "nodemon": "^2.0.16",
+    "ts-node-dev": "^1.1.8",
     "typescript": "4.6.4"
+  },
+  "dependencies": {
+    "connect-redis": "^6.1.3",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "redis": "^4.1.0"
   }
 }
