--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "4.6.4"
   },
   "dependencies": {
+    "chalk": "^5.0.1",
     "connect-redis": "^6.1.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
